--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home | adarshbalika</title>
+    <title>home | Abhinav Singh</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"><a href="/">adarshbalika</a></div>
+      <div class="nav-brand"><a href="/">Abhinav Singh</a></div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link link-active" href="/">home</a>
@@ -25,16 +25,19 @@
     <header class="hero">
       <img class="hero-img" src="images/hero.svg" />
       <h1 class="hero-heading">
-        adarsh balika the <span class="heading-inverted"> web developer</span>
+        Abhinav Singh the <span class="heading-inverted"> Software Engineer</span>
       </h1>
     </header>
 
     <section class="section ow">
       <div class="container container-center">
-        <h1>technologies</h1>
+        <h1>Technologies</h1>
         <p>
-          I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and
-          Web Hosting
+          I'm familiar with HTML5, CSS3, Git and SpringBoot.
+        </p>
+        <h1>Languages</h1>
+        <p>
+          Familiar with Java, JavaScript, Python, C, C++.
         </p>
       </div>
     </section>
@@ -44,7 +47,7 @@
         <h1>projects</h1>
         <p>
           I like to showcase my work and thus, you can see my projects hosted
-          online
+          online after some time.
         </p>
         <a class="link link-primary" href="/projects.html">See Projects</a>
       </div>
