--- a/blogs.html
+++ b/blogs.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
-    <title>blogs | adarshbalika</title>
+    <title>blogs | Abhinav Singh</title>
   </head>
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"><a href="/">adarshbalika</a></div>
+      <div class="nav-brand"><a href="/">Abhinav Singh</a></div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link" href="/">home</a>
@@ -32,7 +32,7 @@
       <li>
         <article class="showcase-list container container-center">
           <h1>dummy blog one</h1>
-          <small>November, 2020</small>
+          <small>November, 2022</small>
           <p>
             The most well-known dummy text is the 'Lorem Ipsum', which is said
             to have originated in the 16th century. Lorem Ipsum is composed in a
@@ -47,7 +47,7 @@
       <li>
         <article class="showcase-list container container-center">
           <h1>second dummy blog</h1>
-          <small>November, 2020</small>
+          <small>November, 2022</small>
           <p>
             Dummy text: Its function as a filler or as a tool for comparing the
             visual impression of different typefaces Dummy text is text that is
