--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <header class="hero">
-      <img class="hero-img" src="images/hero.svg" />
+      <img class="hero-img" src="images/img.jpg" />
       <h1 class="hero-heading">
         Abhinav Singh the <span class="heading-inverted"> Software Engineer</span>
       </h1>
