--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <h1>Languages</h1>
         <p>
-          Familiar with Java, JavaScript, Python, C, C++.
+          Familiar with Java, JavaScript, Python, C++.
         </p>
       </div>
     </section>
@@ -68,13 +68,13 @@
       <div class="footer-header">social media presence</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/neogcamp/"> github </a>
+          <a class="link" href="https://github.com/Abhi16DTU"> github </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://twitter.com/neogcamp"> twitter </a>
+          <a class="link" href="#"> twitter </a>
         </li>
         <li class="list-item-inline">
-          <a class="link" href="https://www.linkedin.com/company/neog-camp/">
+          <a class="link" href="https://www.linkedin.com/in/abhinav-singh16/">
             linkedin
           </a>
         </li>
